--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#000000">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Outfit:wght@100;900&display=swap" rel="stylesheet">
@@ -45,16 +46,18 @@
 
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
 
-        html, body {
-            background-color: #000; color: #fff; margin: 0; padding: 0;
+        html {
+            background-color: #000; /* fills iOS safe areas including home bar */
+            height: 100%;
+        }
+
+        body {
+            background-color: transparent; color: #fff; margin: 0; padding: 0;
             width: 100%; height: 100%;
             display: flex; justify-content: center; align-items: center;
             font-family: -apple-system, system-ui, sans-serif;
             overflow: hidden;
             position: fixed;
-            /* iPhone safe area — covers home bar at bottom */
-            padding-bottom: env(safe-area-inset-bottom);
-            padding-top: env(safe-area-inset-top);
         }
 
         body { animation: pageEntrance 1.5s var(--slow-ease) forwards; opacity: 0; }
